--- a/app/src/main/res/layout/item_historys.xml
+++ b/app/src/main/res/layout/item_historys.xml
@@ -55,30 +55,14 @@
             app:layout_constraintStart_toEndOf="@+id/iv_medicine"
             app:layout_constraintTop_toBottomOf="@+id/tv_medicine_name" />
 
-<!--        <ImageView-->
-<!--            android:visibility="gone"-->
-<!--            android:id="@+id/iv_my_medicine"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:layout_marginTop="4dp"-->
-<!--            android:layout_gravity="center_horizontal"-->
-<!--            android:translationZ="1dp"-->
+<!--        <CheckBox-->
+<!--            android:id="@+id/cb_my_medicine"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
 
-<!--            android:textOn=""-->
-<!--            android:textOff=""-->
-<!--            android:src="@drawable/baseline_arrow_circle_right_24dp"-->
 <!--            app:layout_constraintTop_toTopOf="parent"-->
 <!--            app:layout_constraintBottom_toBottomOf="parent"-->
 <!--            app:layout_constraintEnd_toEndOf="parent"/>-->
-
-        <CheckBox
-            android:id="@+id/cb_my_medicine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
