--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -101,7 +101,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="chipMinHeight">40dp</item>
         <item name="chipIconVisible">false</item>
-        <item name="closeIconVisible">true</item>
+        <item name="closeIconVisible">false</item>
         <item name="closeIconTint">@color/gray</item>
         <item name="checkedIconVisible">false</item>
     </style>
