--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,38 +8,48 @@
     tools:context=".ui.home.HomeFragment">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/logo_final"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        style="@style/body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="안녕하세요 OO님!"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
-
-    <View
-        android:id="@+id/view2"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header_public"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/any_200"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/header_logo"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/logo_final"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/header_title"
+            style="@style/medium_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="부탁해약"
+            android:textColor="@color/back_500"
+            app:layout_constraintBottom_toBottomOf="@+id/header_logo"
+            app:layout_constraintStart_toEndOf="@+id/header_logo"
+            app:layout_constraintTop_toTopOf="@+id/header_logo" />
+
+        <View
+            android:id="@+id/header_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/any_200"
+            app:layout_constraintTop_toBottomOf="@+id/header_logo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_add_medicine_container"
-        android:layout_width="160dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
@@ -50,8 +60,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_medicine_1"
-            style="@style/subtitle_b"
-            android:layout_width="160dp"
+            style="@style/body_b"
+            android:layout_width="120dp"
             android:layout_height="48dp"
             android:background="@drawable/round_rect_500_bottom"
             android:elevation="0dp"
@@ -76,8 +86,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_medicine_2"
-            style="@style/subtitle_b"
-            android:layout_width="160dp"
+            style="@style/body_b"
+            android:layout_width="120dp"
             android:layout_height="48dp"
             android:background="@drawable/round_rect_500_top"
             android:elevation="0dp"
@@ -95,16 +105,17 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_medicine_group"
-        style="@style/subtitle_b"
-        android:layout_width="160dp"
+        style="@style/medium_b"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/round_long_rect_500"
         android:backgroundTint="@color/green"
+        android:stateListAnimator="@null"
         android:text="+ 복약 등록"
         android:textColor="@color/white"
-        android:stateListAnimator="@null"
+        android:textSize="18sp"
         android:translationZ="4dp"
         app:elevation="0dp"
         app:icon="@drawable/baseline_add_14"
@@ -116,7 +127,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/view2"
+        app:layout_constraintTop_toBottomOf="@+id/header_public"
         tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
@@ -126,10 +137,10 @@
 
             <TextView
                 android:id="@+id/textView2"
-                style="@style/body_b"
+                style="@style/medium_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="26dp"
+                android:layout_marginTop="16dp"
                 android:paddingHorizontal="16dp"
                 android:text="약 알림" />
 
@@ -138,7 +149,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/home_cl_bg_today_medicine"
                 android:paddingTop="20dp"
@@ -150,7 +161,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="16dp"
-                    android:text="OO님의 오늘 복용해야 하는 약"
+                    android:text="오늘 복용해야 하는 약"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -158,6 +169,7 @@
                     android:id="@+id/home_rv_today_medicine_group"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView3"
                     tools:itemCount="2"
@@ -176,10 +188,10 @@
 
             <TextView
                 android:id="@+id/textView6"
-                style="@style/body_b"
+                style="@style/medium_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:paddingHorizontal="16dp"
                 android:text="연결된 기타 서비스" />
 
@@ -188,17 +200,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/home_cl_bg_connection"
                 android:elevation="3dp"
-                android:padding="20dp">
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="12dp">
 
                 <ImageView
                     android:id="@+id/home_connection_1_icon"
-                    android:layout_width="79dp"
-                    android:layout_height="79dp"
-                    android:src="@drawable/icon_pharmacy_label"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/icon_pharmacy"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -208,17 +221,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
-                    android:layout_marginTop="8dp"
-                    android:text="나랑 가까운 약국"
+                    android:text="가까운 약국 찾기"
+                    app:layout_constraintBottom_toTopOf="@+id/home_connection_1_desc"
                     app:layout_constraintStart_toEndOf="@+id/home_connection_1_icon"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
 
                 <TextView
                     android:id="@+id/home_connection_1_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="약샤라샤라 샬라샬라"
+                    android:text="주변의 약국을 쉽게 찾아보세요."
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/home_connection_1_title"
                     app:layout_constraintTop_toBottomOf="@+id/home_connection_1_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -233,13 +247,14 @@
                 android:layout_marginBottom="120dp"
                 android:background="@drawable/home_cl_bg_connection"
                 android:elevation="3dp"
-                android:padding="20dp">
+                android:paddingHorizontal="12dp"
+                android:paddingVertical="12dp">
 
                 <ImageView
                     android:id="@+id/home_connection_3_icon"
-                    android:layout_width="79dp"
-                    android:layout_height="79dp"
-                    android:src="@drawable/icon_pharmacy_label"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/icon_search_medicine"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -249,17 +264,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="14dp"
-                    android:layout_marginTop="8dp"
-                    android:text="이게 무슨 약이지?"
+                    android:text="약 정보 검색 "
+                    app:layout_constraintBottom_toTopOf="@+id/home_connection_3_desc"
                     app:layout_constraintStart_toEndOf="@+id/home_connection_3_icon"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
 
                 <TextView
                     android:id="@+id/home_connection_3_desc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="모르는 약이 있을 땐? 샤라샤라샬라샬라"
+                    android:text="원하는 약물의 효과와 부작용을 알아보세요."
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/home_connection_3_title"
                     app:layout_constraintTop_toBottomOf="@+id/home_connection_3_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
