--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -8,6 +8,45 @@
     android:background="@color/white"
     >
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header_public"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/header_logo"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/logo_final"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/header_title"
+            style="@style/medium_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="부탁해약"
+            android:textColor="@color/back_500"
+            app:layout_constraintBottom_toBottomOf="@+id/header_logo"
+            app:layout_constraintStart_toEndOf="@+id/header_logo"
+            app:layout_constraintTop_toTopOf="@+id/header_logo" />
+
+        <View
+            android:id="@+id/header_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/any_200"
+            app:layout_constraintTop_toBottomOf="@+id/header_logo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ImageView
         android:layout_width="170dp"
         android:layout_height="170dp"
@@ -24,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header_public"
         app:layout_constraintStart_toStartOf="parent"
 
         android:padding="13dp"
