--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -44,8 +44,9 @@
         android:id="@+id/naver_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="네이버 로그인 위치"
         android:layout_marginTop="16dp"
+        android:text="네이버 로그인 위치"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_kakao_login" />
@@ -54,8 +55,9 @@
         android:id="@+id/google_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="구글 로그인 위치"
         android:layout_marginTop="16dp"
+        android:text="구글 로그인 위치"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/naver_login" />
