--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -13,23 +13,27 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/logo_big"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@+id/progressBar"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:progressBackgroundTint="@color/gray"
-        android:progressTint="@color/green"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="@id/iv_medicine"
+        android:progressBackgroundTint="@color/gray"
+        android:progressTint="@color/green"
         app:layout_constraintBottom_toBottomOf="@id/iv_medicine"
-        app:layout_constraintStart_toEndOf="@id/iv_medicine" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/iv_medicine"
+        app:layout_constraintTop_toTopOf="@id/iv_medicine" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
