--- a/app/src/main/res/anim/fab_close.xml
+++ b/app/src/main/res/anim/fab_close.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true">
+    <translate
+        android:duration="300"
+        android:fromXDelta="0.0"
+        android:fromYDelta="0.0"
+        android:toXDelta="0.0"
+        android:toYDelta="100.0" />
     <scale
         android:duration="300"
         android:fromXScale="1"
         android:fromYScale="1"
         android:interpolator="@android:anim/linear_interpolator"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:toXScale="0.0"
-        android:toYScale="0.0" />
+        android:toXScale="1"
+        android:toYScale="1" />
     <alpha
         android:duration="300"
         android:fromAlpha="1.0"
         android:interpolator="@android:anim/accelerate_interpolator"
         android:toAlpha="0.0" />
-
 </set>
