--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,16 +20,16 @@
         app:layout_constraintTop_toBottomOf="@+id/search_lo_tab">
 
         <ImageView
-            android:layout_width="240dp"
-            android:layout_height="240dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
 
+            android:alpha="0.15"
             android:scaleType="fitCenter"
-            android:src="@drawable/logo_big_trans"
+            android:src="@drawable/logo_big"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="#EEEEEE" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,8 +42,8 @@
 
         <ImageView
             android:id="@+id/search_iv_logo"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
 
             android:scaleType="fitCenter"
             android:src="@drawable/logo_big"
